--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.17",
+    "@stripe/stripe-js": "^1.52.1",
     "autoprefixer": "10.4.14",
+    "axios": "^1.3.5",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "next": "13.4.13",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "react-hot-toast": "^2.4.0",
+    "stripe": "^12.1.1",
+    "swr": "^2.1.3",
+    "tailwindcss": "3.3.3",
+    "use-shopping-cart": "^3.1.6"
   }
 }
